--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-    themes:light --default , dark , valentine;
+    themes:light , dark --default , valentine;
   }
